[gd_scene load_steps=5 format=3 uid="uid://1ls7m1hmkb3e"]

[ext_resource type="Script" path="res://title_screen.gd" id="1_6ic2k"]
[ext_resource type="FontFile" uid="uid://bb7ubynldjpav" path="res://AlteHaasGroteskBold.ttf" id="2_2jhoe"]
[ext_resource type="Texture2D" uid="uid://neg0pqutho8l" path="res://Untitled_Artwork.png" id="2_hm5xb"]
[ext_resource type="FontFile" uid="uid://d0lt2nukme5g8" path="res://AlteHaasGroteskRegular.ttf" id="4_degxt"]

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_6ic2k")

[node name="bckground" type="ColorRect" parent="."]
offset_right = 1154.0
offset_bottom = 653.0
color = Color(0, 0, 0, 1)

[node name="ActualTitle" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="ActualTitle"]
layout_mode = 0
offset_left = 151.0
offset_top = 56.0
offset_right = 998.0
offset_bottom = 128.0
theme_override_fonts/font = ExtResource("2_2jhoe")
theme_override_font_sizes/font_size = 50
text = "Who Cares About Growth Potential
"

[node name="StartButton" type="Button" parent="ActualTitle"]
layout_mode = 0
offset_left = 451.0
offset_top = 436.0
offset_right = 676.0
offset_bottom = 499.0
theme_override_fonts/font = ExtResource("2_2jhoe")
theme_override_font_sizes/font_size = 40
text = "Start Game"

[node name="Instructions" type="Button" parent="ActualTitle"]
layout_mode = 0
offset_left = 419.0
offset_top = 504.0
offset_right = 718.0
offset_bottom = 581.0
theme_override_fonts/font = ExtResource("2_2jhoe")
theme_override_font_sizes/font_size = 40
text = "Instructions"

[node name="Sprite2D" type="Sprite2D" parent="ActualTitle"]
modulate = Color(1, 1, 1, 0.894118)
position = Vector2(619, 341)
scale = Vector2(0.497487, 0.253597)
texture = ExtResource("2_hm5xb")

[node name="BackStory" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextEdit" type="RichTextLabel" parent="BackStory"]
layout_mode = 0
offset_left = 125.0
offset_top = 97.0
offset_right = 997.0
offset_bottom = 541.0
size_flags_horizontal = 4
theme_override_fonts/normal_font = ExtResource("4_degxt")
theme_override_font_sizes/normal_font_size = 20
text = "You are the founder of a tech startup that you believe is super unique and totally necessary. You've decided you need to demonstrate growth potential to investors to get more funding. 

To aid you, your super cool investors have shared the metrics they will use to evaluate the company's success, as well as tools to achieve them. And though your employees have mentioned doubt in these tools and metrics, you are confident that pursuing the numbers above all will lead to great success! 

Go forth and make your investors happy so you can expand your company (and profits)!   



"

[node name="LetsGo" type="Button" parent="BackStory"]
layout_mode = 0
offset_left = 452.0
offset_top = 399.0
offset_right = 689.0
offset_bottom = 467.0
theme_override_fonts/font = ExtResource("2_2jhoe")
theme_override_font_sizes/font_size = 50
text = "Lets Go!!!"

[node name="BackToStart" type="Button" parent="BackStory"]
layout_mode = 0
offset_left = 466.0
offset_top = 498.0
offset_right = 665.0
offset_bottom = 543.0
theme_override_fonts/font = ExtResource("2_2jhoe")
theme_override_font_sizes/font_size = 30
text = "Back To Start"

[node name="Instructions" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Instructions"]
layout_mode = 0
offset_left = 132.0
offset_top = 98.0
offset_right = 1049.0
offset_bottom = 543.0
theme_override_fonts/font = ExtResource("4_degxt")
theme_override_font_sizes/font_size = 20
text = "This game is inspired by incremental games like cookie clicker. 
Controls: 
- Use your mouse to click on your employees to assign tasks. Each completed task will earn you $100.
- Once you've saved up enough $$$, you can purchase various upgrades.

To Win:
- Write as many lines of code as possible! If you are able to get the number of TODOs down
then that's cool too. 

To Lose:
- Lose all your employees. You can also lose by letting the list of TODOs get up to a certain 
amount."

[node name="Button" type="Button" parent="Instructions"]
layout_mode = 0
offset_left = 387.0
offset_top = 492.0
offset_right = 768.0
offset_bottom = 555.0
theme_override_fonts/font = ExtResource("2_2jhoe")
theme_override_font_sizes/font_size = 40
text = "Back To Start Menu"

[connection signal="pressed" from="ActualTitle/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ActualTitle/Instructions" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="BackStory/LetsGo" to="." method="_on_lets_go_pressed"]
[connection signal="pressed" from="BackStory/BackToStart" to="." method="_on_back_to_start_pressed"]
[connection signal="pressed" from="Instructions/Button" to="." method="_on_button_pressed"]
